--- a/.luarc.json
+++ b/.luarc.json
@@ -1,13 +1,15 @@
 {
-  "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "workspace.library": ["./lua/wezterm/types"],
-  "runtime.version": "Lua 5.4",
-  "hint": {
-    "enable": true,
-    "setType": true
-  },
-  "completion": {
-    "callSnippet": "Replace",
-    "displayContext": 8
-  }
+    "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+    "workspace.library": [
+        "./lua/wezterm/types"
+    ],
+    "runtime.version": "Lua 5.4",
+    "hint": {
+        "enable": true,
+        "setType": true
+    },
+    "completion": {
+        "callSnippet": "Replace",
+        "displayContext": 8
+    }
 }
